--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Android</string>
+    <string name="app_name">DrChip</string>
+    <string name="computer_service">Computer Service</string>
+    <string name="laptop_service">Laptop Service</string>
+    <string name="accessories">Accessories</string>
+    <string name="other">Other</string>
+    <string name="data_recovery">Data Recovery</string>
+    <string name="online_troubleshooting">Online Troubleshooting</string>
+    <string name="offers">Offers</string>
+    <string name="contact">Contact</string>
+    <string name="chat">Chat</string>
 </resources>
